--- a/Architect migration, business continuity, and disaster recovery in Azure/1 .Design your migration.md
+++ b/Architect migration, business continuity, and disaster recovery in Azure/1 .Design your migration.md
@@ -21,7 +21,7 @@
       |Service Map|	Assess|	Maps communication between application components on Windows or Linux. Helps you identify dependencies when scoping what to migrate.|
       |Azure TCO Calculator	|Assess|	Estimates your monthly running costs in Azure.|
       |Azure Site Recovery|	Migrate|	Moves VMs from on-premises to Azure.|
-      |Azure Database Migration| Service|	Migrate	Uses the Data Migration Assistant and the Azure portal to manage the whole process of moving database workloads to Azure.|
+      |Azure Database Migration Service|	Migrate|	Uses the Data Migration Assistant and the Azure portal to manage the whole process of moving database workloads to Azure.|
       |Azure Data Box|	Migrate|	Efficiently moves large datasets of either offline or online data to Azure.|
       |Data Migration Assistant|	Migrate|	Assesses SQL databases for compatibility, and then migrates the schema and data.|
       |Data Migration Tool|	Migrate|	Migrates existing databases to Azure Cosmos DB.|
@@ -115,5 +115,54 @@
   - ![](2019-11-20-00-17-05.png)
 - [Migrate databases with Azure Database Migration Service](https://docs.microsoft.com/en-au/learn/modules/design-your-migration-to-azure/5-migrate-databases/)
   - Azure Database Migration Service enables online and offline migrations from multiple database sources to Azure data platforms, all with minimal downtime. The service uses the Microsoft Data Migration Assistant to generate assessment reports. Identified tasks are then performed by the Database Migration Service.
-  - 
+  - Offline vs. online migration
+    - An offline migration requires shutting down the server at the start of the migration, which means downtime for the service. 
+    - An online migration uses a continuous synchronization of live data, allowing a cutover to the Azure replica database at any time. The online option is the better of the two if you need to minimize downtime for your workload.
+  - Azure Database Migration Service has two pricing tiers:
+    - **Standard**: Supports only offline migrations. There's no charge to use this tier.
+    - **Premium**: Supports **both offline and online** migrations. There's no charge for the first six months. After that period, you'll incur charges.
+  - Your relational database can be migrated to a number of different destinations in Azure: 
+    - **Single Azure SQL Database instance**
+    - **Azure SQL Database managed instance**
+    - **SQL Server on Azure Virtual Machines**
+    - **Azure Database for MySQL**
+    - **Azure Database for PostgresSQL**
+    - **Azure Cosmos DB**
+  - Overview of database migrations
+    - Prerequisites
+      - **Download the Data Migration Assistant**: Download and install the assistant locally on your on-premises servers running SQL Server.
+      - **Create an Azure Virtual Network instance**: This virtual network is for Azure Database Migration Service when it uses the Azure Resource Manager deployment model. The virtual network provides connectivity to the on-premises environment.
+      - **Configure the network security group**: The security group associated with the new virtual network should allow inbound connectivity to the service via ports 443, 53, 9354, 445, and 12000.
+      - **Configure the Windows Firewall**: You must configure the firewall to allow the Database Migration Service to connect over port 1433. You can also open port 1434 if multiple named instances on dynamic ports exist on the same server.
+      - **Configure credentials**:
+        - Add **CONTROL SERVER** permissions to the credentials used to connect to the source SQL Server instance.
+        - Add **CONTROL DATABASE** permissions to the credentials used to connect to the target Azure SQL Database instance.
+      - **Provision your target database in Azure**: Create the database that is to be the target of the migration. Size it appropriately for the migrated workload.
+    - Assess the on-premises databases
+      - Using the Data Migration Assistant, create an **Assessment** project, give the project a name, and select the source and target servers. 
+      - The assessment will generate a **report** on completion, including a set of recommendations and alternative approaches that could be taken for the migration.
+    - Migrate the schema by using the Data Migration Assistant
+      - To use the Data Migration Assistant to **migrate** the schema, create a new Migration project. 
+      - Select your on-premises SQL Server instance as the source server, and your Azure SQL Database instance as the target server. Set the scope of the migration to **Schema Only**. 
+      - After you connect to the source database, choose the schema objects to deploy to the new SQL database. The Data Migration Assistant will create a script to take the required actions. Then, select **Deploy Schema** to run the script. When the script is complete, check the target server to make sure the database has been configured correctly.
+      - ![](2019-11-20-20-45-26.png)
+    - Migrate your data with Database Migration Service
+      - Create an instance of Azure Database Migration Service. Choose the pricing tier based on whether you need an online or offline migration.
+      - Create a new migration project. Choose the type of migration you want to perform, either offline or online.
+      - Specify source and target server details, including the authentication information.
+      - Identify the databases. Map the relevant target database on the target server to the source server.
+      - Run and monitor the migration.
+        - Select the Run migration button to start the migration. The migration activity screen will appear.
+        - Track the progress until the process shows as completed.
+      - After all the required databases are migrated, check them to make sure they're working.
+      - ![](2019-11-20-20-52-23.png)
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/design-your-migration-to-azure/6-summary/)
+- [Azure Migrate](https://docs.microsoft.com/azure/migrate/migrate-overview)
+- [Azure Site Recovery](https://docs.microsoft.com/azure/site-recovery/site-recovery-overview)
+- [Azure Database Migration Service](https://docs.microsoft.com/azure/dms/dms-overview)
+- [Physical server to Azure disaster recovery architecture](https://docs.microsoft.com/azure/site-recovery/physical-azure-architecture)
+- [Hyper-V to Azure disaster recovery architecture](https://docs.microsoft.com/azure/site-recovery/hyper-v-azure-architecture)
+- [Predict costs and optimize spending for Azure](https://docs.microsoft.com/learn/modules/predict-costs-and-optimize-spending/)
+- [Design for efficiency and operations in Azure](https://docs.microsoft.com/learn/modules/design-for-efficiency-and-operations-in-azure/)
+- [Azure Monitor overview](https://docs.microsoft.com/azure/azure-monitor/overview)
+- [Azure Sentinel overview](https://docs.microsoft.com/azure/sentinel/overview)
