master: scale sets

--- a/Architect migration, business continuity, and disaster recovery in Azure/6 .Scale sets.md
+++ b/Architect migration, business continuity, and disaster recovery in Azure/6 .Scale sets.md
@@ -7,3 +7,9 @@
 - [Install and update applications in virtual machine scale sets](https://docs.microsoft.com/en-au/learn/modules/build-app-with-scale-sets/6-install-update-applications-virtual-machine-scale-sets/)
 - [Exercise - Update applications in virtual machine scale sets](https://docs.microsoft.com/en-au/learn/modules/build-app-with-scale-sets/7-exercise-update-applications-virtual-machine-scale-sets/)
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/build-app-with-scale-sets/8-summary/)
+  - [Overview of autoscale with Azure virtual machine scale sets](https://docs.microsoft.com/azure/virtual-machine-scale-sets/virtual-machine-scale-sets-autoscale-overview)
+  - [Deploy your application on virtual machine scale sets](https://docs.microsoft.com/azure/virtual-machine-scale-sets/virtual-machine-scale-sets-deploy-app)
+  - [Work with large virtual machine scale sets](https://docs.microsoft.com/azure/virtual-machine-scale-sets/virtual-machine-scale-sets-placement-groups)
+  - [Use the custom script extension for Windows](https://docs.microsoft.com/azure/virtual-machines/extensions/custom-script-windows)
+  - [Use the Azure custom script extension version 2 with Linux VMs](https://docs.microsoft.com/azure/virtual-machines/extensions/custom-script-linux)
+  - [Use the application health extension with virtual machine scale sets](https://docs.microsoft.com/azure/virtual-machine-scale-sets/virtual-machine-scale-sets-health-extension)
